--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3070",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.1",
     "@next/font": "^14.0.3",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "react-functional-select": "^5.0.0",
+    "react-hook-form": "^7.48.2",
+    "react-window": "^1.8.10",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
