--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "next-14",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3070",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/is-prop-valid": "^1.2.1",
-    "@next/font": "^14.0.3",
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-functional-select": "^5.0.0",
-    "react-hook-form": "^7.48.2",
-    "react-window": "^1.8.10",
-    "sass": "^1.69.5",
-    "styled-components": "^6.1.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "name": "next-14",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3070",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier": "prettier --write ."
+    },
+    "dependencies": {
+        "@emotion/is-prop-valid": "^1.2.1",
+        "@next/eslint-plugin-next": "^14.0.4",
+        "@next/font": "^14.0.3",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-react": "^7.33.2",
+        "next": "14.0.0",
+        "prettier": "^3.1.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-functional-select": "^5.0.0",
+        "react-hook-form": "^7.48.2",
+        "react-window": "^1.8.10",
+        "sass": "^1.69.5",
+        "styled-components": "^6.1.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "14.0.0",
+        "postcss": "^8",
+        "tailwindcss": "^3",
+        "typescript": "^5"
+    }
 }
