--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,120 @@
 {
-    "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "next",
+        "next/core-web-vitals",
+        // "plugin:@next/next/recommended",
+        "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "plugins": ["@typescript-eslint", "react", "prettier"],
+    "rules": {
+        "react/no-unescaped-entities": "off",
+        "@next/next/no-page-custom-font": "off",
+        "no-var": "error",
+        "prefer-const": [
+            "error",
+            {
+                "destructuring": "any",
+                "ignoreReadBeforeAssign": false
+            }
+        ],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/camelcase": "off",
+        "quotes": [1, "single"],
+        "semi": ["off", "always"],
+        "semi-spacing": [0, { "before": false, "after": true }],
+        "newline-after-var": 2,
+        "getter-return": ["error", { "allowImplicit": true }],
+        "no-control-regex": "error",
+        "no-dupe-args": "error",
+        "no-dupe-keys": "error",
+        "no-duplicate-case": "error",
+        "no-empty": "error",
+        "no-empty-character-class": "error",
+        "no-ex-assign": "error",
+        "no-extra-semi": "error",
+        "no-func-assign": "error",
+        "no-inner-declarations": "error",
+        "no-irregular-whitespace": "error",
+        "no-obj-calls": "error",
+        "no-unsafe-negation": "error",
+        "require-atomic-updates": "error",
+        "use-isnan": "error",
+        "valid-typeof": ["error", { "requireStringLiterals": true }],
+        "block-scoped-var": "error",
+        "curly": "error",
+        "default-case": "error",
+        "dot-location": ["error", "property"],
+        "dot-notation": ["error"],
+        "eqeqeq": ["error", "always"],
+        "max-classes-per-file": "error",
+        "no-case-declarations": "error",
+        "no-else-return": "error",
+        "no-empty-function": "error",
+        "no-empty-pattern": "error",
+        "no-fallthrough": ["error", { "commentPattern": "break[\\s\\w]*omitted" }],
+        "no-floating-decimal": "error",
+        "no-global-assign": "error",
+        "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
+        "no-octal": "error",
+        "no-redeclare": "error",
+        "no-self-assign": "error",
+        "no-with": "error",
+        "require-await": "error",
+        "no-shadow-restricted-names": "error",
+        "array-bracket-spacing": ["error", "never"],
+        "block-spacing": "error",
+        "brace-style": "error",
+        "camelcase": "error",
+        "comma-dangle": "off",
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "jsx-quotes": ["error", "prefer-double"],
+        "key-spacing": ["error", { "beforeColon": false }],
+        "keyword-spacing": ["error", { "before": true }],
+        "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
+        "no-lonely-if": "error",
+        "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+        "no-whitespace-before-property": "error",
+        "padding-line-between-statements": [
+            "error",
+            { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+            {
+                "blankLine": "any",
+                "prev": ["const", "let", "var"],
+                "next": ["const", "let", "var"]
+            }
+        ],
+        "space-infix-ops": "error",
+        "spaced-comment": ["error", "always"],
+        "arrow-spacing": "error",
+        "no-class-assign": "error",
+        "no-const-assign": "error",
+        "no-dupe-class-members": "error",
+        "no-duplicate-imports": "error",
+        "no-new-symbol": "error",
+        "require-yield": "error",
+        "rest-spread-spacing": ["error", "never"]
+    },
+    "overrides": [
+        {
+            "files": ["*.json"],
+            "rules": {
+                "quotes": "off"
+            }
+        }
+    ]
 }
