--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
     "tabWidth": 4,
     "useTabs": false,
-    "semi": true,
     "singleQuote": true,
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "arrowParens": "avoid",
-    "requirePragma": false
+    "semi": true,
+    "printWidth": 120,
+    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
