--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
     },
     "dependencies": {
         "@emotion/is-prop-valid": "^1.2.1",
-        "@next/eslint-plugin-next": "^14.0.4",
         "@next/font": "^14.0.3",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.2",
-        "eslint-plugin-react": "^7.33.2",
         "next": "14.0.0",
-        "prettier": "^3.1.1",
         "react": "^18",
         "react-dom": "^18",
         "react-functional-select": "^5.0.0",
@@ -30,10 +25,18 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^6.16.0",
+        "@typescript-eslint/parser": "^6.16.0",
         "autoprefixer": "^10",
         "eslint": "^8.56.0",
         "eslint-config-next": "14.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-react": "^7.33.2",
         "postcss": "^8",
+        "prettier": "^3.1.1",
+        "prettier-plugin-organize-imports": "^3.2.4",
+        "prettier-plugin-tailwindcss": "^0.5.10",
         "tailwindcss": "^3",
         "typescript": "^5"
     }
